fix color wrapping in spin

--- a/tests/inputs/colors.less
+++ b/tests/inputs/colors.less
@@ -108,3 +108,8 @@ body {
 	direct: darken(#fcf4e3, 3%); // #fbefd5
 }
 
+// spin around
+pre {
+	@errorBackground: #f2dede;
+	spin: spin(@errorBackground, -10);
+}
